chore: use default JVM options constants defined in gatling-enterprise-plugin-commons